--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,61 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --white: #ffffff;
+  --red: #ff0000;
+
+  --gray-100: #e1e1e6;
+  --gray-200: #a4b3d4;
+  --gray-700: #333;
+  --gray-800: #29292e;
+  --gray-850: #1f2729;
+  --gray-900: #121214;
+
+  --blue-200: #7f8eba;
+  --blue-300: #788ef0;
+  --blue-400: #4b80e5;
+  --blue-700: #103273;
+}
+
+@media (max-width: 1080px) {
+  html {
+      font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+      font-size: 87.5%;
+  }
+}
+
+body {
+  background-color: var(--white);
+  color: var(--gray-850);
+}
+
+body, input, textarea, select, button {
+  font: 400 1rem "Roboto", sans-serif;
+}
+
+button {
+  cursor: pointer;
+  background: transparent;
+  border: none;
+
+  &:focus {
+    border: none;
+  }
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
